--- a/app/views/projects/settings/_members.rhtml
+++ b/app/views/projects/settings/_members.rhtml
@@ -15,7 +15,14 @@
 	<% members.each do |member| %>
 	<% next if member.new_record? %>
 	<tr id="member-<%= member.id %>" class="<%= cycle 'odd', 'even' %> member">
-	<td class="<%= member.principal.class.name.downcase %>"><%= link_to_user member.principal %></td>
+	<td class="<%= member.principal.class.name.downcase %>">
+          <%= link_to_user member.principal %>
+          <% if member.user.signed_cla? %>
+          (CLA signed)
+          <% else %>
+          (<b>No</b> <a href="http://typo3.org/about/licenses/">CLA</a> signed)
+          <% end %>
+        </td>
   <td class="roles">
     <span id="member-<%= member.id %>-roles"><%=h member.roles.sort.collect(&:to_s).join(', ') %></span>
     <% if authorize_for('members', 'edit') %>
